--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:background="@color/purple_200">
 
     <ImageView
+        android:id="@+id/img_logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_logo_android"
@@ -13,7 +14,30 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="40dp" />
+
+    <TextView
+        android:id="@+id/txt_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Entrar"
+        app:layout_constraintTop_toBottomOf="@id/img_logo"
+        app:layout_constraintLeft_toLeftOf="@id/img_logo"
+        app:layout_constraintRight_toRightOf="@id/img_logo"
+        android:textSize="25sp"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:id="@+id/txt_login_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Insira suas informações"
+        app:layout_constraintTop_toBottomOf="@id/txt_login"
+        app:layout_constraintStart_toStartOf="@id/txt_login"
+        app:layout_constraintEnd_toEndOf="@id/txt_login"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/edtText_name"
@@ -25,7 +49,7 @@
         android:hint="Nome"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="280dp"
         android:importantForAutofill="no" />
 
     <EditText
@@ -40,7 +64,17 @@
         android:layout_marginTop="20dp"
         android:importantForAutofill="no" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatCheckBox
+        android:id="@+id/ckBox_remember"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lembrar"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="@id/edtText_password"
+        app:layout_constraintTop_toBottomOf="@id/edtText_password"
+        app:layout_constraintBottom_toTopOf="@id/btn_login"/>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -48,7 +82,8 @@
         app:layout_constraintEnd_toEndOf="@id/edtText_password"
         app:layout_constraintTop_toBottomOf="@id/edtText_password"
         android:text="Entrar"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        app:cornerRadius="20dp"/>
 
     <TextView
         android:id="@+id/txt_create_account"
