--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:layout_marginStart="35dp"/>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_back"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/img_main"
