--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,25 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="3dp"
+        android:background="#B3808080"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ImageView
         android:id="@+id/img_logo"
         android:layout_width="100dp"
@@ -44,7 +63,7 @@
         android:layout_height="45dp"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:hint="Nome"
+        android:hint="email"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:layout_marginTop="280dp"
@@ -58,18 +77,9 @@
         app:layout_constraintTop_toBottomOf="@id/edtText_name"
         android:paddingStart="10dp"
         android:hint="Senha"
+        android:inputType="textPassword"
         android:layout_marginTop="20dp"
         android:importantForAutofill="no" />
-
-    <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/ckBox_remember"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lembrar"
-        android:textColor="@color/black"
-        app:layout_constraintLeft_toLeftOf="@id/edtText_password"
-        app:layout_constraintTop_toBottomOf="@id/edtText_password"
-        app:layout_constraintBottom_toTopOf="@id/btn_login"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_register"
@@ -95,6 +105,4 @@
         android:layout_marginTop="40dp"
         android:clickable="true"
         android:focusable="true" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
